--- a/PowerBI_Work_Samples.ipynb
+++ b/PowerBI_Work_Samples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "authorship_tag": "ABX9TyM22nSFbAD/zocSZwqJC0Ha",
-      "include_colab_link": true
+      "include_colab_link": false
     },
     "kernelspec": {
       "name": "python3",
