--- a/PowerBI_Work_Samples.ipynb
+++ b/PowerBI_Work_Samples.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM22nSFbAD/zocSZwqJC0Ha",
-      "include_colab_link": false
+      "authorship_tag": "ABX9TyM22nSFbAD/zocSZwqJC0Ha"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kntb0107/bi-work-samples/blob/main/PowerBI_Work_Samples.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
